# HPC_KMeans

./: .gitignore  CMakeLists.txt  build.sh  gather.sh  profiling.sh  run_timings.sh  sklearn_profiling.sh
include/: Aligned_Allocator.h  Cont_Mem_Parallel_KMeans.h  KMeans.h  Parallel_KMeans.h  SIMD_Operations.h  Tests.h  utils.h
src/: Bindings.cpp  CMakeLists.txt  Cont_Mem_Parallel_KMeans.cpp  KMeans  KMeans.cpp  KMeans.py  Parallel_KMeans.cpp  Pybind_KMeans.py  Tests.cpp  gather.py  main.cpp  my_program  test.ipynb
